# aiotapioca-wrapper

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .travis.yml  MANIFEST  Makefile  README.md  codecov.yml  docker-compose.yaml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yaml  release.yml  tests.yaml  tests.yml
aiotapioca/: __init__.py  adapters.py  aiotapioca.py  exceptions.py  generate.py  serializers.py  tapioca.py  utils.py
aiotapioca/adapters/: adapters.py  mixins.py
aiotapioca/aiotapioca/: __init__.py  aiotapioca.py  base.py  process_data.py
aiotapioca/client/: base.py  client.py  process_data.py
docs/source/: about.rst  adapter_class.rst  buildingawrapper.rst  changelog.rst  conf.py  contributors.rst  exceptions.rst  features.rst  flavours.rst  index.rst  quickstart.rst  serializers.rst
src/aiotapioca/: __init__.py  exceptions.py  generate.py  utils.py
src/aiotapioca/adapters/: adapters.py  mixins.py
src/aiotapioca/client/: base.py  client.py  process_data.py
src/aiotapioca/new/client/: sessions.py
tapioca_async/: adapters.py  tapioca.py
tests/: callbacks.py  client.py  clients.py  conftest.py  fixtures.py  models.py  parsers.py  test_adapters.py  test_aiotapioca.py  test_client.py  test_exceptions.py  test_parsers.py  test_process_data.py  test_serializers.py  test_tapioca.py  test_tapioca_client_executor.py  test_tapioca_client_response.py  test_token_refreshing.py
tests/test_adapters/: test_adapter_pydantic.py  test_adapter_xml.py
tests/test_new/: test_aiohttp_session.py
