[build-system]
requires = ["setuptools>=60.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiotapioca-wrapper"
description = "Python asynchronous I/O API client generator"
readme = "README.md"
authors = [
    {name = "Filipe Ximenes, Andrey Ilin"},
    {email = "andreyilin@fastmail.com"}
]
keywords = ["async","asyncio","tapioca","wrapper","api"]
requires-python = ">=3.7"
dependencies = [
    "aiohttp>=3.0",
    "orjson>=3.0.0",
    "pydantic>=1.0.0",
    "xmltodict>=0.9.2",
    "asyncio_atexit>=1.0,<2.0",
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Framework :: aiohttp",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
dynamic = ["version"]

#[project.optional-dependencies]
#test = [
#    "aioresponses>=0.7",
#    "pytest>=7.0",
#    "pytest-asyncio>=0.18",
#    "yarl>=1.0,<2.0",
#]
#dev = [
#    "black>=22.0",
#    "isort>=5.10.0",
#]

[tool.setuptools]
package-dir = {"aiotapioca" = "aiotapioca"}
package-data = {"aiotapioca" = ["py.typed"]}
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "aiotapioca.__version__"}

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
