[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "aiotapioca-wrapper"
description = ""
authors = [
    {name = "ilindrey", email = "andreyilin@fastmail.com"},
]
dependencies = [
    "aiohttp>=3.0",
    "asyncio_atexit>=1.0,<2.0",
    "orjson>=3.0.0",
    "xmltodict>=0.9.2",
    "pydantic>=1.0.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[tool.pdm]
version = { source = "scm" }
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: Implementation :: CPython",
        "Framework :: aiohttp",
        "Topic :: Internet :: WWW/HTTP",
        "Topic :: Software Development :: Libraries :: Application Frameworks",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]

[tool.pdm.dev-dependencies]
test = [
    "aioresponses>=0.7.3",
    "yarl>=1.7.2",
    "pytest>=7.1.2",
    "pytest-asyncio>=0.19.0",
]
formatter = [
    "black>=22.6.0",
    "isort>=5.10.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
